# pycounts

./: .gitignore  id_ed25519  id_ed25519.pub  pycounts.py
pycounts/: CHANGELOG.md  README.md  pyproject.toml
pycounts/docs/: conf.py
pycounts/src/pycounts/: pycounts.py
pycounts/tests/: test_pycounts.py
