[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a textfile"
authors = ["Nayeb Maleki"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
